fixed letter spacing between numbers

--- a/src/components/Watch/Watch.css
+++ b/src/components/Watch/Watch.css
@@ -1,6 +1,6 @@
 .watch {
-  color: white;
-  align-self: start;
-  text-align: left;
-  padding-left: 1.5rem;
+	color: white;
+	text-align: center;
+	letter-spacing: 0.05rem;
+	font-variant-numeric: tabular-nums;
 }
